syntax = "proto3";
package types;

option go_package = "github.com/sisu-network/sisu/x/sisu/types";

message ValPubkey {
  string type = 1;
  bytes bytes = 2;
}

message Node {
  // This id field is not used to identify a node. Use the consensusKey to identify a node.
  string id = 1;
  // Cosmos pubkey
  ValPubkey valPubkey = 2;
  string accAddress = 3;
  bool isValidator = 4;
}
